@@ -52,7 +52,6 @@
 								<configuration>
 									<!-- Jpackage arguments -->
 									<!-- Don't use spaces in application name, because of problems with install scripts ... -->
-									<identifier>org.openecard.richclient</identifier>
 									<appVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</appVersion>
 									<module>org.openecard.richclient/org.openecard.richclient.RichClient</module>
 									<jdkToolchain>
@@ -64,7 +63,6 @@
 									<jvmArgs>
 										<jvmArg>-XX:-UsePerfData</jvmArg>
 										<jvmArg>-XX:-Inline</jvmArg>
-										<jvmArg>-XX:+AggressiveOpts</jvmArg>
 										<jvmArg>-Xms16m</jvmArg>
 										<jvmArg>-Xmx64m</jvmArg>
 										<jvmArg>-XX:+UseG1GC</jvmArg>
